@@ -1,10 +1,11 @@
 name = Transliteration
 description = Converts non-latin text to US-ASCII and sanitizes file names.
 core = 7.x
+configure = admin/config/media/file-system
 
-; Information added by drupal.org packaging script on 2011-10-14
-version = "7.x-3.0"
+; Information added by drupal.org packaging script on 2012-06-01
+version = "7.x-3.1"
 core = "7.x"
 project = "transliteration"
-datestamp = "1318580199"
+datestamp = "1338540713"
 
